# Struktury_Danych_1

./: CMakeLists.txt
data/: test_data.txt
include/: DoublyLinkedList.hpp  DynamicArray.hpp  LinkedList.hpp  random.hpp  utility.hpp
results/: DA_addFirst.csv  DA_addLast.csv  DA_addRandom.csv  DA_find.csv  DA_removeFirst.csv  DA_removeLast.csv  DA_removeRandom.csv  DLL_addFirst.csv  DLL_addLast.csv  DLL_addRandom.csv  DLL_find.csv  DLL_removeFirst.csv  DLL_removeLast.csv  DLL_removeRandom.csv  SLL_addFirst.csv  SLL_addLast.csv  SLL_addRandom.csv  SLL_find.csv  SLL_removeFirst.csv  SLL_removeLast.csv  SLL_removeRandom.csv
src/: DoublyLinkedList.cpp  DynamicArray.cpp  LinkedList.cpp  main.cpp
